--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     const game = new Phaser.Game(config);
 
     function preload() {
-      this.load.image('sun', 'https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Sun_symbol.svg/64px-Sun_symbol.svg.png');
+      this.load.image('sun', 'https://i.imgur.com/5X3vMlf.png');
       this.load.image('planet', 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Blue_circle_100%25.svg/50px-Blue_circle_100%25.svg.png');
     }
 
