--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     const game = new Phaser.Game(config);
 
     function preload() {
-      this.load.image('sun', 'https://raw.githubusercontent.com/kenneyNL/space-kit/main/Sprites/yellow-planet.png');
+      this.load.image('sun', 'https://kenney.nl/assets/space-kit/icons/yellow-planet.png');
       this.load.image('planet', 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Blue_circle_100%25.svg/50px-Blue_circle_100%25.svg.png');
     }
 
