--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     function preload() {}
 
     function create() {
+      this.cameras.main.startFollow(spaceship, true, 0.1, 0.1);
+      this.cameras.main.setZoom(1);
+      graphics = this.add.graphics();
       graphics = this.add.graphics();
       cursors = this.input.keyboard.createCursorKeys();
 
@@ -76,6 +79,8 @@
     }
 
     function update() {
+      graphics.clear();
+      drawGrid();
       graphics.clear();
       applyGravity(sun, planet);
       applyGravity(sun, spaceship);
@@ -126,6 +131,38 @@
       const ay = force * dy / dist / bodyB.mass;
       bodyB.vx += ax;
       bodyB.vy += ay;
+    }
+
+    function drawGrid() {
+      const gridSize = 50;
+      const cam = game.scene.scenes[0].cameras.main;
+      const topLeftX = cam.scrollX;
+      const topLeftY = cam.scrollY;
+      const bottomRightX = cam.scrollX + cam.width / cam.zoom;
+      const bottomRightY = cam.scrollY + cam.height / cam.zoom;
+
+      graphics.lineStyle(1, 0x333333, 0.3);
+
+      for (let x = Math.floor(topLeftX / gridSize) * gridSize; x < bottomRightX; x += gridSize) {
+        graphics.beginPath();
+        graphics.moveTo(x, topLeftY);
+        graphics.lineTo(x, bottomRightY);
+        graphics.strokePath();
+      }
+
+      for (let y = Math.floor(topLeftY / gridSize) * gridSize; y < bottomRightY; y += gridSize) {
+        graphics.beginPath();
+        graphics.moveTo(topLeftX, y);
+        graphics.lineTo(bottomRightX, y);
+        graphics.strokePath();
+      }
+    }
+      for (let y = 0; y < config.height; y += gridSize) {
+        graphics.beginPath();
+        graphics.moveTo(0, y);
+        graphics.lineTo(config.width, y);
+        graphics.strokePath();
+      }
     }
 
     function drawTrail() {
