--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         applyGravity(sys.sun, sys.planet);
         applyGravity(sys.sun, spaceship);
         applyGravity(sys.planet, spaceship);
+        applyGravity(sys.planet, sys.sun);
       }
 
       // Player controls for spaceship thrust
