--- a/index.html
+++ b/index.html
@@ -82,7 +82,16 @@
       ];
 
       for (const { x, y } of baseSystems) {
+        // Set up solar system with zero total momentum
+        const planetMass = 100;
+        const sunMass = 2000;
+        const planetVx = 0;
+        const planetVy = -2.0;
+        const sunVx = -(planetMass / sunMass) * planetVx;
+        const sunVy = -(planetMass / sunMass) * planetVy;
         const s = this.add.circle(x, y, 20, 0xffff00);
+        s.vx = sunVx;
+        s.vy = sunVy;
         this.physics.add.existing(s);
         s.body.setCollideWorldBounds(true);
         s.mass = 2000;
@@ -90,6 +99,8 @@
         s.vy = 0;
 
         const p = this.add.circle(x + 200, y, 16, 0x00aaff);
+        p.vx = planetVx;
+        p.vy = planetVy;
         p.mass = 100;
         p.vx = 0;
         p.vy = -2.0;
@@ -166,6 +177,7 @@
         sys.sun.x += sys.sun.vx;
         sys.sun.y += sys.sun.vy;
         sys.planetLabel.setPosition(sys.planet.x, sys.planet.y - 30);
+        sys.sunLabel.setPosition(sys.sun.x, sys.sun.y - 30);
       }
 
       spaceship.x += spaceship.vx;
