--- a/index.html
+++ b/index.html
@@ -206,6 +206,30 @@
       spaceship.x += spaceship.vx;
       spaceship.y += spaceship.vy;
 
+      // Collision check with sun and planets
+      for (const sys of solarSystems) {
+        const dx = spaceship.x - sys.sun.x;
+        const dy = spaceship.y - sys.sun.y;
+        const dist = Math.sqrt(dx * dx + dy * dy);
+        if (dist < 30) {
+          const angle = Math.atan2(dy, dx);
+          spaceship.vx = spaceship.vy = 0;
+          spaceship.x = sys.sun.x + Math.cos(angle) * 30;
+          spaceship.y = sys.sun.y + Math.sin(angle) * 30;
+        }
+        for (const p of sys.planets) {
+          const dxp = spaceship.x - p.body.x;
+          const dyp = spaceship.y - p.body.y;
+          const distp = Math.sqrt(dxp * dxp + dyp * dyp);
+          if (distp < 26) {
+            const angle = Math.atan2(dyp, dxp);
+            spaceship.vx = spaceship.vy = 0;
+            spaceship.x = p.body.x + Math.cos(angle) * 26;
+            spaceship.y = p.body.y + Math.sin(angle) * 26;
+          }
+        }
+      }
+
             spaceshipLabel.setPosition(spaceship.x, spaceship.y - 30);
 
       // Draw flame trail
